tests/ui/missing/missing-stability.stderr
error: function has missing stability attribute
  --> $DIR/missing-stability.rs:8:1
   |
LL | / pub fn unmarked() {
LL | |
LL | |     ()
LL | | }
   | |_^

error: function has missing stability attribute
  --> $DIR/missing-stability.rs:22:5
   |
LL |     pub fn unmarked() {}
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

